:art: attempt to prevent zoom on input-focus with larger font

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,10 +7,7 @@
             type="image/svg+xml"
             href="public/images/logos/emu_bw.svg"
         />
-        <meta
-            name="viewport"
-            content="width=device-width, initial-scale=1.0, user-scalable=no, user-scalable=0"
-        />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>RunEmu | Find your next race</title>
         <link
             rel="stylesheet"
