--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,11 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link
-            rel="icon"
-            type="image/svg+xml"
-            href="public/images/logos/emu_bw.svg"
-        />
+        <link rel="icon" href="public/images/logos/emu_color_crop.webp.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>RunEmu | Find your next race</title>
         <link
